--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@radix-ui/react-icons": "^1.1.1",
     "@stitches/react": "^1.2.8",
     "framer-motion": "^8.1.3",
+    "moment": "^2.29.4",
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
     "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1"
+    "eslint-config-next": "^13.1.1",
+    "typescript": "^5.1.3"
   }
 }
