--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.1.1",
     "@stitches/react": "^1.2.8",
     "framer-motion": "^8.1.3",
+    "lucide-react": "^0.424.0",
     "moment": "^2.29.4",
     "next": "^13.1.1",
     "react": "18.2.0",
