--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,15 +14,20 @@
     "framer-motion": "^8.1.3",
     "lucide-react": "^0.525.0",
     "moment": "^2.29.4",
-    "next": "^13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "15.3.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.7",
-    "@types/react": "^19.1.8",
+    "@types/react": "19.1.8",
     "eslint": "^9.30.0",
-    "eslint-config-next": "^15.3.4",
+    "eslint-config-next": "15.3.4",
     "typescript": "^5.1.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.8"
+    }
   }
 }
