--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.1.1",
     "@stitches/react": "^1.2.8",
-    "framer-motion": "^8.1.3",
     "lucide-react": "^0.525.0",
     "moment": "^2.29.4",
+    "motion": "^12.19.2",
     "next": "15.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
